- [ADD] Refactored and extended microservice examples to demonstrate the new macros supporting async spans.
https://github.com/xadecimal/async-style[`async-style`] and https://github.com/mpenet/auspex/[`auspex`] libraries are used in the examples for higher level wrappers over `core.async` and `CompletableFuture`, but neither library is used by `clj-otel` itself.
- [ADD] New example `word-stream-app` that demonstrates manual instrumentation of a `core.async.flow` application.
- [ADD] By default, populate `code.function.name` attribute to name of function containing the start of each span.
This is implemented using the StackWalker API for performance reasons, starting in Java 9.
If StackWalker is not available, the attribute is not populated.
- [ADD] Updated `span/new-span!` to provide defaults for source location, similar to other functions and macros that
create spans. Note: `new-span!` is now a macro.
- [ADD] New middleware `span/wrap-span` and `span/wrap-bound-span` to create a span around subsequent processing.
These can be used as an alternative to the deprecated `wrap-exception-event` to record uncaught exceptions before they are transformed.
- Bump deps
* [MAINT] OpenTelemetry `1.53.0`, semconv `1.34.0`, instrumentation `2.19.0-alpha`

=== `0.2.8` (2025-05-22)

- [ADD] Updated microservices examples to export logs to Grafana Loki.
A `Logs` panel has been added to the `HTTP server instances` dashboard.
- Bump deps
* [MAINT] OpenTelemetry `1.50.0`, semconv `1.32.0`, instrumentation `2.16.0-alpha`
** [BREAK] Deprecated `wrap-exception-event` and `exception-event-interceptor`.
These will be stubbed out and later removed in future releases.
https://opentelemetry.io/docs/specs/semconv/attributes-registry/exception/#exception-escaped[OpenTelemetry no longer recommends to record non-escaping exceptions.]
** [BREAK] `add-exception!` and `add-interceptor-exception!` now assume the exception is escaping the span's scope i.e. former option `:escaping?` is true.