@@ -43,7 +43,8 @@ clojure -A:deps -T:build help/doc"
    "clj-otel-instrumentation-runtime-telemetry-java17"])
 
 (def ^:private demo-project-paths
-  ["examples/common/async"
+  ["examples/common/anonymise-app"
+   "examples/common/async"
    "examples/common/load-gen"
    "examples/common/log4j2.utils"
    "examples/common/system"
