@@ -1,0 +1,24 @@
+;!zprint {:style [:respect-nl] :width 140}
+
+{:paths   ["src" "resources"]
+
+ :deps    {org.clojure/clojure       {:mvn/version "1.12.2"}
+           org.clojure/tools.logging {:mvn/version "1.3.0"}
+           org.clojure/core.async    {:mvn/version "1.9.808-alpha1"}
+           cc.qbits/auspex           {:mvn/version "1.0.3"}
+           com.github.igrishaev/whew {:mvn/version "0.1.1"}
+           com.github.steffan-westcott/clj-otel-api {:local/root "../../clj-otel-api"}
+           com.xadecimal/async-style {:mvn/version "0.1.0"}
+           funcool/promesa           {:mvn/version "11.0.678"}}
+
+ :aliases {:otel  {:jvm-opts ["-javaagent:../opentelemetry-javaagent.jar"
+                              "-Dotel.resource.attributes=service.name=anonymise-app"
+                              "-Dotel.metrics.exporter=none"
+                              "-Dotel.logs.exporter=none"]}
+
+           :log4j {:extra-deps {org.apache.logging.log4j/log4j-core        {:mvn/version "2.25.1"}
+                                org.apache.logging.log4j/log4j-jcl         {:mvn/version "2.25.1"}
+                                org.apache.logging.log4j/log4j-jul         {:mvn/version "2.25.1"}
+                                org.apache.logging.log4j/log4j-slf4j2-impl {:mvn/version "2.25.1"}}
+                   :jvm-opts   ["-Dclojure.tools.logging.factory=clojure.tools.logging.impl/log4j2-factory"
+                                "-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager"]}}}
