@@ -1,0 +1,12 @@
+status = warn
+
+appender.console.type = Console
+appender.console.name = STDOUT
+appender.console.layout.type = PatternLayout
+appender.console.layout.pattern = %d{ISO8601} %-5level %32X{trace_id} %16X{span_id} %40.40logger %message%n%throwable
+
+logger.app.level = debug
+logger.app.name = example
+
+rootLogger.level = info
+rootLogger.appenderRef.stdout.ref = STDOUT
